# testrepo

./: app.py  pydantic.txt  pyproject.toml  test.py
biobrain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: index.html
